# g4chargeit

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  common_func.py
g4chargeit/: .gitignore  CMakeLists.txt  g4chargeit.cc
g4chargeit/distributions/: Fig2-FarrellSolarMinimum.csv  Fig4-Li2023-SWelectrons.csv  Fig4-Li2023-SWions.csv  define_distributions.py  electronMaxwellian_distribution.txt  electronSolarWind_distribution.txt  ionSolarWind_distribution.txt  photonSolar_distribution.txt  photonSource_distribution.txt
g4chargeit/geometry/: create-regularSpheres-HCPstacking.ipynb  irregularSpheres_fromCAD.stl  irregularSpheres_fromPython.stl  irregular_spheres.STL  modify-irregularSpheres-CADfile.ipynb  modify-realisticGrains-CADfile.ipynb  realisticGrains_fromCAD.stl  realisticGrains_fromPython.stl  regularSpheres_fromPython.stl
g4chargeit/include/: ActionInitialization.hh  AdaptiveSumRadialFieldMap.hh  DetectorConstruction.hh  DetectorMessenger.hh  G4ParticleChangeForPeriodic.hh  Run.hh  RunAction.hh  SensitiveDetectorHit.hh  g4pbc_export.h
g4chargeit/pacescripts/: create_macros_wang2016.py  create_macros_zimmerman2016.py
g4chargeit/pacescripts/batchscripts/: 000_submit_iteration0_onlysolarwind.sh
g4chargeit/pacescripts/macros/: 000_iteration0_onlyphotoemission_num500000.mac
g4chargeit/slurm-scripts/: createMacros-IrregularSpheres.py  createMacros-RealisticGrains.py  createMacros-RegularSpheres.py  shared_utils.py
g4chargeit/slurmscripts/: createMacros-IrregularSpheres.py  shared_utils.py
g4chargeit/src/: ActionInitialization.cc  AdaptiveSumRadialFieldMap.cc  DetectorConstruction.cc  DetectorMessenger.cc  PrimaryGeneratorAction.cc  SDManager.cc  SensitiveDetector.cc  SensitiveDetectorHit.cc
g4chargeit/test-macros/: testphotons-irregular.mac  testphotons-realistic.mac  testphotons-regular.mac  testsolarwind-irregular.mac  testsolarwind-realistic.mac  testsolarwind-regular.mac  vis.mac
sphere-charging/: CMakeLists.txt  README  charging_sphere.cc  define_distributions.py  electron_distribution.txt  macro.mac  photon_distribution.txt  testphotons.mac  testsolarwind.mac  testwangphotons.mac  vis.mac
sphere-charging/distributions/: Fig4-Feurerbacher1972.csv  define_distributions.py  photon_distribution.txt  photon_distribution_until80eV.txt
sphere-charging/geometry/: isolated_grain_interpolated.stl  stacked_spheres_frompython_cropped.stl
sphere-charging/include/: AdaptiveSumRadialFieldMap.hh  DetectorConstruction.hh  DetectorMessenger.hh  G4EmStandardPhysics_option4_modified.hh  G4HadronElasticPhysics_mod.hh  G4RadialElectricField.hh  PhysListEmLivermore.hh  PhysicsList.hh  RunAction.hh  SDManager.hh  SumRadialField.hh  SumRadialFieldMap.hh
sphere-charging/lib/: libg4pbc.so.1.0.0
sphere-charging/pacescripts/: batchscript_oldversion.sh  createMacros-IrregularSpheres-version2.py  createMacros-RealisticGrains-version2.py  createMacros-RegularSpheres-version2.py  create_macros.py  create_macros_irregularspheres.py  create_macros_wang2016.py  create_macros_zimmerman2016.py  create_submission_file.py  submit_all_iterations.sh  submit_all_iterations_onlyphotoemission.sh
sphere-charging/pacescripts/batchscripts/: 000_submit_iteration0_foronlyphotoemission.sh  000_submit_iteration0_foronlysolarwind.sh  000_submit_iteration0_onlyphotoemission.sh  000_submit_iteration0_onlysolarwind.sh  001_submit_iteration0_foronlysolarwind.sh  001_submit_iteration1_foronlyphotoemission.sh  002_submit_iteration1_foronlysolarwind.sh  002_submit_iteration2_foronlyphotoemission.sh  003_submit_iteration2_foronlysolarwind.sh  003_submit_iteration3_foronlyphotoemission.sh  004_submit_iteration3_foronlysolarwind.sh  004_submit_iteration4_foronlyphotoemission.sh  005_submit_iteration4_foronlysolarwind.sh  005_submit_iteration5_foronlyphotoemission.sh  006_submit_iteration5_foronlysolarwind.sh  006_submit_iteration6_foronlyphotoemission.sh  007_submit_iteration6_foronlysolarwind.sh  007_submit_iteration7_foronlyphotoemission.sh  008_submit_iteration7_foronlysolarwind.sh  008_submit_iteration8_foronlyphotoemission.sh  009_submit_iteration8_foronlysolarwind.sh  009_submit_iteration9_foronlyphotoemission.sh  00_submit_iteration0_foronlyphotoemission.sh  00_submit_iteration0_foronlysolarwind.sh  010_submit_iteration10_foronlyphotoemission.sh  010_submit_iteration9_foronlysolarwind.sh  011_submit_iteration10_foronlysolarwind.sh  011_submit_iteration11_foronlyphotoemission.sh  012_submit_iteration11_foronlysolarwind.sh  012_submit_iteration12_foronlyphotoemission.sh  013_submit_iteration12_foronlysolarwind.sh  013_submit_iteration13_foronlyphotoemission.sh  014_submit_iteration13_foronlysolarwind.sh  014_submit_iteration14_foronlyphotoemission.sh  015_submit_iteration14_foronlysolarwind.sh  015_submit_iteration15_foronlyphotoemission.sh  016_submit_iteration15_foronlysolarwind.sh  016_submit_iteration16_foronlyphotoemission.sh  017_submit_iteration16_foronlysolarwind.sh  017_submit_iteration17_foronlyphotoemission.sh  (+1079 more)
sphere-charging/pacescripts/macros/: 000_iteration0_onlyphotoemission_num500000.mac  000_iteration0_onlysolarwind_num500000.mac  000_stackediteration0_allparticles_num1000000.mac  000_stackediteration0_onlyphotoemission_num100000.mac  000_stackediteration0_onlyphotoemission_num1000000.mac  000_stackediteration0_onlysolarwind_num1000000.mac  000_stackediteration0_onlysolarwind_num2000.mac  (+1554 more)
sphere-charging/src/: AdaptiveSumRadialFieldMap.cc  DetectorConstruction.cc  DetectorMessenger.cc  G4EmStandardPhysics_option4_modified.cc  G4RadialElectricField.cc  PhysicsList.cc  RunAction.cc  SDManager.cc  SensitiveDetector.cc  SensitiveDetectorHit.cc  SumRadialField.cc  SumRadialFieldMap.cc
sphere-charging/test-macros/: testphotons.mac
test/: CMakeCache.txt  CMakeLists.txt  assembly.PLY  charging_sphere.cc  macro.mac
test/include/: DetectorConstruction.hh  G4RadialElectricField.hh  PrimaryGeneratorAction.hh  SensitiveDetector.hh
test/src/: DetectorConstruction.cc  G4RadialElectricField.cc  PhysListEmLivermore.cc  PhysicsList.cc  Run.cc  SensitiveDetectorHit.cc
(+324 files in other folders)
